--- a/FoodMunch.css
+++ b/FoodMunch.css
@@ -35,9 +35,10 @@
   }
 .main-image-bag {
     background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png");
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     background-size: cover;
+    position:absolute;
   }
   .main-bg-headding{
     color: white;
