--- a/FoodMunch.css
+++ b/FoodMunch.css
@@ -34,8 +34,7 @@
     font-family: "Roboto";
   }
 .main-image-bag {
-    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png");
-    height: 100vh;
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
     width: 100vw;
     background-size: cover;
   }
