--- a/FoodMunch.css
+++ b/FoodMunch.css
@@ -35,7 +35,8 @@
   }
 .main-image-bag {
     background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
-    width: 100vw;
+    width: 100%;
+    height:100vh;
     background-size: cover;
   }
   .main-bg-headding{
