--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
 
 .food-munch-logo {
-  width: 65px;
-  height: 60px;
-  
+  width: 80px;
+  height: 70px;
 }
 #navItem1 {
   color: #323f4b;
@@ -21,115 +20,145 @@
   color: #323f4b;
   font-family: "Roboto";
 }
-#navItem5 {
-    color: #323f4b;
-    font-family: "Roboto";
-  }
-  #navItem6 {
-    color: #323f4b;
-    font-family: "Roboto";
-  }
-  #navItem7 {
-    color: #323f4b;
-    font-family: "Roboto";
-  }
-.main-image-bag {
-    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
-    width: 100vw;
-    height:100vh;
-    background-size: cover;
-  }
-  .main-bg-headding{
-    color: white;
-    font-family:oboto;
-  }
-.page-headding{
-    font-family:sans-serif;
-    font-size: 30px;
-    padding-top: 5px;
-    font-weight: bold;
-    color: #193752;
-    padding-bottom: 5px;
+.banner-section-bg-container {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png");
+  height: 100vh;
+  background-size: cover;
 }
-.wcu-card{
-
+.banner-heading {
+  color: white;
+  font-family: "Roboto";
+  font-size: 45px;
+  font-weight: 300;
+}
+.banner-caption {
+  color: #f5f7fa;
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: 300;
+}
+.custom-button {
+  color: white;
+  background-image: linear-gradient(#d0b200, #a58d00);
+  width: 130px;
+  height: 45px;
+  border-width: 0;
+  border-radius: 8px;
+  margin-right: 10px;
+}
+.custom-outline-button {
+  color: #d0b200;
+  background-color: transparent;
+  width: 130px;
+  height: 45px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d0b200;
+  border-radius: 8px;
+}
+.wcu-section {
+  background-color: #f9fbfe;
+}
+.wcu-section-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 28px;
+  font-weight: 700;
+}
+.wcu-section-description {
+  color: #5a7184;
+  font-family: "Roboto";
+  font-size: 16px;
+}
+.wcu-card {
   text-align: center;
+  background-color: white;
   border-style: solid;
-  border-color: rgb(102, 221, 102);
-  border-width: 2px;
-  border-radius: 10px;
-  background-color:rgb(245, 243, 241);
-  padding: 5px;
-
+  border-width: 1px;
+  border-color: #e5eaf4;
+  border-radius: 16px;
 }
-.card-image{
+.wcu-card-image {
+  width: 87px;
   height: 90px;
-  width: 85px;
-
-
 }
-.card-headding{
-  font-size: 30px;
+.wcu-card-title {
+  color: #323f4b;
+  font-family: "Roboto";
+  font-size: 22px;
+  font-weight: 500;
 }
-.card-para{
-  font-size: 15px;
+.wcu-card-description {
+  color: #7b8794;
+  font-family: "Roboto";
+  font-size: 16px;
 }
-.span-section{
-  columns: black;
-  font-weight: bold;
+.offers {
+  color: #323f4b;
+  font-style: italic;
+  font-weight: 600;
 }
-.Explore-menu-card{
-  border-style: solid;
-  border-width: 0px;
-  border-radius: 15px;
-  background-color:rgb(248, 246, 243);
+.explore-menu-section {
+  background-color: white;
 }
-.Explore-image{
-
-  width: 50%;
-  height: 50%;
-  border-radius: 15px;
+.menu-section-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 28px;
+  font-weight: 700;
 }
-.Explore-para{
-  color: #3e4969;
-  font-family: Cambria;
-  font-size: 17px;
-  font-weight:bold;
+.menu-item-image {
+  border-radius: 16px;
 }
-.Explore-anchore{
-  color: rgb(18, 199, 18);
-  font-weight: bold;
+.menu-card-title {
+  color: #323f4b;
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 24px;
 }
-.page-para{
-  font-size: 17px;
-  color: rgb(89, 75, 82);
+.menu-item-link {
+  color: #d0b200;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 500;
 }
-.button-10 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 6px 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
-  border-radius: 6px;
-  border: none;
-
-  color: #fff;
-  background: linear-gradient(180deg, #f7dd4b 0%, #deba1a 100%);
-   background-origin: border-box;
-  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+.menu-item-card {
+  border-radius: 16px;
 }
-
-.button-10:focus {
-  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+.healthy-food-section {
+  background-color: #f9fbfe;
 }
-.offer-section{
-  border-style: solid;
-  border-width: 0px;
-  border-radius: 15px;
-  background-color:rgb(248, 246, 243);
+.healthy-food-section-img {
+  width: 270px;
+}
+.healthy-food-section-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 28px;
+  font-weight: 700;
+}
+.healthy-food-section-description {
+  color: #5a7184;
+  font-family: "Roboto";
+  font-size: 16px;
+}
+.delivery-and-payment-section {
+  background-color: white;
+}
+.delivery-and-payment-section-img {
+  width: 270px;
+}
+.delivery-and-payment-section-heading {
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 28px;
+  font-weight: 700;
+}
+.delivery-and-payment-section-description {
+  color: #5a7184;
+  font-family: "Roboto";
+  font-size: 16px;
 }
 .payment-card-img {
   width: 50px;
@@ -137,7 +166,7 @@
   margin-right: 28px;
 }
 .thanking-customers-section {
-  background-color: #d0b2001a;
+  background-image: radial-gradient(#fff8db, #fae38c);
 }
 .thanking-customers-section-heading {
   color: #183b56;
@@ -154,18 +183,47 @@
   width: 270px;
   margin-bottom: 20px;
 }
-.custom-button {
-  color: white;
-  background-color: #d0b200;
-  width: 130px;
-  height: 45px;
-  border-width: 0;
-  border-radius: 8px;
-  margin-right: 10px;
+.thanking-customers-section-modal-title {
+  color: #d0b200;
+  font-weight: 800;
 }
-.abcd{
-  border-style: solid;
-  border-width: 0px;
-  border-radius: 15px;
-  background-color:rgb(248, 246, 243);
+.follow-us-section {
+  background-color: white;
+}
+.follow-us-section-heading {
+  text-align: center;
+  color: #183b56;
+  font-family: "Roboto";
+  font-size: 28px;
+  font-weight: 700;
+}
+.follow-us-icon-container {
+  background-color: #faf7e8;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  margin: 15px;
+  padding-top: 22px;
+  padding-bottom: 14px;
+  padding-right: 16px;
+  padding-left: 22px;
+}
+.icon {
+  color: #d0b200;
+  font-size: 35px;
+}
+.footer-section {
+  background-color: #0d2436;
+}
+.footer-section-mail-id {
+  color: #959ead;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 20px;
+}
+.footer-section-address {
+  color: #959ead;
+  font-family: "Roboto";
+  font-size: 14px;
 }
